vbnc/vbnc/tests/Errors/30636.vb
Imports System.Reflection

<
Assembly: A("")

> 

